fix issue with scrollbar appearing on about slide

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -96,6 +96,7 @@ body
     justify-content: center
     align-items: center
     margin: 10em
+        bottom: 0
 
 .about-me-header
     display: flex
